@@ -9,6 +9,7 @@ TODO: AnyEvent::Handle with AnyEvent::IO?
 TODO: invalid. and localhost. specialcasing inside AEDNS and not AESocket (rfc6761)
 TODO: maybe implement env variable to give hosts precedence
 
+TODO: mention AnyEvent::fork etc.
         - calling AnyEvent->now_update with AnyEvent::Impl::Perl caused an
           endless loop (reported by Dietrich Rebmann).
         - add tlsv1_1 and tlsv1_2 protocols to AnyEvent::TLS
